@@ -1,3 +1,8 @@
+2016-12-10 Riccardo Mottola <rm@gnu.org>
+
+	* Output/GNUstepOutput/GNUstepOutput.m
+	Traditional init code
+
 2015-03-08 Riccardo Mottola <rm@gnu.org>
 
 	* TalkSoupBundles/Functions.m
